<resources>
    <string name="app_name">EmployeeCrudWithApi</string>

    <!--Employee-->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="designation">Designation</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="dob">Date of Birth</string>
    <string name="salary">Salary</string>

    <!--Buttons-->
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="list_page">List Page</string>
    <string name="add_employee">Add Employee</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="send_custom_broadcast">Send Custom Broadcast</string>
    <string name="go_to_list_view_activity">Go to List View Activity</string>
    <string name="go_to_grid_view_activity">Go to Grid View Activity</string>
</resources>