<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp">

    <!-- Text Section (90%) -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:maxLines="10"
            android:singleLine="false"
            android:text="@string/name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:maxLines="10"
            android:singleLine="false"
            android:text="@string/email"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/designationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:maxLines="10"
            android:singleLine="false"
            android:text="@string/designation"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- Button Section (10%) -->
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/update"
            android:src="@drawable/pencil_square_svgrepo_com"
            app:tint="@color/teal_700" />

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/delete"
            android:src="@drawable/delete_svgrepo_com"
            app:tint="@color/teal_700" />
    </LinearLayout>
</LinearLayout>
